# llama.cpp

.github/workflows/: labeler.yml
common/: arg.cpp  common.cpp  common.h
docs/: NUMA_SUPPORT.md  tensor-parallelism.md
docs/design/: column-tp.md
ggml/: CMakeLists.txt
ggml/include/: ggml-backend.h  ggml-cpu.h  ggml-cuda.h  ggml-metal.h  ggml-opencl.h  ggml-vulkan.h
ggml/src/: CMakeLists.txt  ggml-backend.cpp
ggml/src/ggml-cuda/: CMakeLists.txt  common.cuh  fattn.cu  ggml-cuda.cu  nccl.cu  nccl.cuh  tensor-parallel.cu  tensor-parallel.cuh
ggml/src/ggml-metal/: ggml-metal.m
ggml/src/ggml-opencl/: ggml-opencl.cpp
ggml/src/ggml-sycl/: ggml-sycl.cpp
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
include/: llama.h
src/: llama-model.cpp  llama.cpp
tests/: CMakeLists.txt  test-col-tp.cpp  test-tensor-parallel.cpp
tools/llama-bench/: llama-bench.cpp
tools/main/: main.cpp
